--- a/My Library.bib
+++ b/My Library.bib
@@ -444,6 +444,25 @@
   keywords = {Science / Earth Sciences / Geology,Science / Paleontology,Social Science / Archaeology}
 }
 
+@article{brochuOsteologyTyrannosaurusRex2003,
+  title = {Osteology of {{Tyrannosaurus Rex}}: {{Insights}} from a Nearly Complete {{Skeleton}} and {{High-Resolution Computed Tomographic Analysis}} of the {{Skull}}},
+  shorttitle = {Osteology of {{Tyrannosaurus Rex}}},
+  author = {Brochu, Christopher A.},
+  date = {2003-01-14},
+  journaltitle = {Journal of Vertebrate Paleontology},
+  volume = {22},
+  pages = {1--138},
+  publisher = {{Taylor \& Francis}},
+  issn = {0272-4634},
+  doi = {10.1080/02724634.2003.10010947},
+  url = {https://doi.org/10.1080/02724634.2003.10010947},
+  urldate = {2023-02-07},
+  abstract = {A detailed osteological description of Tyrannosaurus rex Osborn, 1905 is presented, based primarily on the most complete specimen yet collected of this taxon (FMNH PR2081, popularly known as “Sue”) but also including observations from other specimens. Skull morphology of FMNH PR2081 is largely congruent with that described for previous specimens, but new details are added. Palatal morphology of FMNH PR2081 differs slightly from that of previously-described specimens—the internal choanae are slightly larger relative to skull size, and the anterior expansion of the fused vomers is elongate. Posteriorly, the vomers pass medially for nearly the entire length of the pterygoids. High-resolution x-ray computed tomographic (CT) analysis of the skull reveals internal details not previously observed. Complex recess systems can be traced in the jugal, lacrymal, ectopterygoid, quadrate, exoccipital, supraoccipital, prootic, and basioccipital. The exoccipital recess was perforated by a small foramen on the posterodorsal surface of the paroccipital process, and may have communicated with pneumatic chambers in the atlas-axis complex. The maxillary antra were bound medially by a thin bony wall; traces of these walls in earlier CT studies of tyrannosaurid skulls may have led to the impression that these animals had bony maxillonasal turbintes. A digital endocast was constructed from these images, confirming many previous observations based on natural endocasts, but also yielding new details, such as the presence of a large and presumably pneumatic sinus in the prootic adjacent to the pathway for the maxillary-mandibular branches of the trigeminal nerve. The olfactory bulbs were very large. The postcranium is also largely congruent with previously published descriptions. The precaudal vertebral column was heavily pneumatized, with pneumatopores penetrating the centra and neural arches of all presacral vertebrae, the cervical ribs, and the anteriormost four sacral centra. Unusual structures are tentatively identified as a proatlas arch and a rib on the last presacral vertebrae, structures previously thought absent from tyrannosaurids. The “missing chevron” partially responsible for claims that FMNH PR2081 is female was actually present. The gastralia are extensively fused anteriorly, and the morphology of the anteriormost gastral segments closely resembles the only published account of a tyrannosaurid sternum. This raises several possibilities, including the complete absence of a bony sternum in tyrannosaurids. The appendicular skeleton is congruent with those of other tyrannosaurids. A slender rodlike bone may represent a partial furcula, but this is not certain. The scapulocoracoids would probably not have met at the midline, but would nonetheless have closely approached each other in articulation. Several abnormalities in the skeleton have attracted popular attention. There is no defensible evidence for bite trauma on the skull, but the rib cage does show evidence for healed fractures. Lesions on the right scapulocoracoid and humerus coincide with fractured ribs on the right cervical-dorsal transition and may indicate a single trauma to the right side of the body. The left fibula is pathological, but may not have been fractured. Two fused tail vertebrae may preserve natural molds of the tail muscles.},
+  issue = {sup4},
+  keywords = {to-read},
+  annotation = {\_eprint: https://doi.org/10.1080/02724634.2003.10010947}
+}
+
 @article{brownAvianRespiratorySystem1997,
   title = {The Avian Respiratory System: A Unique Model for Studies of Respiratory Toxicosis and for Monitoring Air Quality.},
   author = {Brown, Richard E and Brain, Joseph D and Wang, Ning},
@@ -1160,7 +1179,7 @@
   abstract = {In 1910, a collecting party from the American Museum of Natural History led by Barnum Brown floated down the Red Deer River of Alberta....},
   langid = {english},
   organization = {{ERA}},
-  keywords = {To Read},
+  keywords = {To-Read},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\QJPTFMT2\\Currie - 1998 - Possible evidence of gregarious behavior in tyrann.pdf;C\:\\Users\\ericr\\Zotero\\storage\\YHXBGQE9\\GAIA_15_1998_271.pdf;C\:\\Users\\ericr\\Zotero\\storage\\XY43XKQD\\19b93ddc-a4b9-4807-9d19-90d21648dfff.html}
 }
 
@@ -1177,6 +1196,22 @@
   langid = {english},
   keywords = {To Read},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\VIWEMKAX\\RoutledgeHandbooks-9781315374512-chapter3.pdf;C\:\\Users\\ericr\\Zotero\\storage\\GNR6RYNH\\9781315374512-5.html}
+}
+
+@article{deeveyLifeTablesNatural1947,
+  title = {Life {{Tables}} for {{Natural Populations}} of {{Animals}}},
+  author = {Deevey, Edward S.},
+  date = {1947-12},
+  journaltitle = {The Quarterly Review of Biology},
+  volume = {22},
+  number = {4},
+  pages = {283--314},
+  publisher = {{The University of Chicago Press}},
+  issn = {0033-5770},
+  doi = {10.1086/395888},
+  url = {https://www.journals.uchicago.edu/doi/abs/10.1086/395888},
+  urldate = {2023-02-07},
+  keywords = {to-read}
 }
 
 @book{desallePhylogenomicsPrimer2020,
@@ -1342,6 +1377,20 @@
   file = {C\:\\Users\\ericr\\Zotero\\storage\\X9KUSKZ8\\Eberth and Currie - 2010 - Stratigraphy, sedimentology, and taphonomy of the .pdf;C\:\\Users\\ericr\\Zotero\\storage\\BXXWAPCA\\Stratigraphy-sedimentology-and-taphonomy-of-the.html}
 }
 
+@book{ebertPlantAnimalPopulations1998,
+  title = {Plant and {{Animal Populations}}: {{Methods}} in {{Demography}}},
+  shorttitle = {Plant and {{Animal Populations}}},
+  author = {Ebert, Thomas A.},
+  date = {1998-08-01},
+  publisher = {{Academic Pr}},
+  location = {{San Diego}},
+  abstract = {This text/reference addresses the ever-increasing challenges of documenting population demographic changes, and will serve as a bridge from introductory ecology to both applied and theoretical demography. It emphasizes the analysis of population data taken from a wide variety of organisms, including terrestrial and aquatic plants and animals found in habitats from equatorial rain forests to the arctic tundra. The book also contains computer programs that are written in BASIC and include tools for population projection, matrix analysis using both sensitivity and elasticity, individual growth and survival models, and the analysis of size-frequency distributions.},
+  isbn = {978-0-12-228740-4},
+  langid = {english},
+  pagetotal = {312},
+  keywords = {To-Read}
+}
+
 @article{ecarnotWritingScientificArticle2015,
   title = {Writing a Scientific Article: {{A}} Step-by-Step Guide for Beginners},
   shorttitle = {Writing a Scientific Article},
@@ -1453,7 +1502,7 @@
   url = {http://www.nature.com/articles/35086558},
   urldate = {2022-07-06},
   langid = {english},
-  keywords = {To Read},
+  keywords = {To-Read},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\LIVUQI7U\\Erickson et al. - 2001 - Dinosaurian growth patterns and rapid avian growth.pdf}
 }
 
@@ -1550,7 +1599,25 @@
   url = {https://www.science.org/doi/abs/10.1126/science.1125721},
   urldate = {2022-09-15},
   keywords = {To Read},
-  file = {C\:\\Users\\ericr\\Zotero\\storage\\AX2SUYLM\\Erickson et al. - 2006 - Tyrannosaur Life Tables An Example of Nonavian Di.pdf}
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\AX2SUYLM\\Erickson et al. - 2006 - Tyrannosaur Life Tables An Example of Nonavian Di.pdf;C\:\\Users\\ericr\\Zotero\\storage\\RM66JX3N\\Erickson et al. - 2006 - Tyrannosaur Life Tables An Example of Nonavian Di.pdf}
+}
+
+@article{ericksonTyrannosaurLifeTables2006a,
+  title = {Tyrannosaur {{Life Tables}}: {{An Example}} of {{Nonavian Dinosaur Population Biology}}},
+  shorttitle = {Tyrannosaur {{Life Tables}}},
+  author = {Erickson, Gregory M. and Currie, Philip J. and Inouye, Brian D. and Winn, Alice A.},
+  date = {2006-07-14},
+  journaltitle = {Science},
+  shortjournal = {Science},
+  volume = {313},
+  number = {5784},
+  pages = {213--217},
+  issn = {0036-8075, 1095-9203},
+  doi = {10.1126/science.1125721},
+  url = {https://www.science.org/doi/10.1126/science.1125721},
+  urldate = {2023-02-07},
+  abstract = {The size and age structures for four assemblages of North American tyrannosaurs—               Albertosaurus, Tyrannosaurus, Gorgosaurus               , and               Daspletosaurus               —reveal a pronounced, bootstrap-supported pattern of age-specific mortality characterized by relatively high juvenile survivorship and increased mortality at midlife and near the maximum life span. Such patterns are common today in wild populations of long-lived birds and mammals. Factors such as predation and entrance into the breeding population may have influenced tyrannosaur survivorship. This survivorship pattern can explain the rarity of juvenile specimens in museum collections.},
+  langid = {english}
 }
 
 @article{erwinDisparityMorphologicalPattern2007,
@@ -2143,6 +2210,24 @@
   urldate = {2022-07-17},
   abstract = {Mass extinctions have played many evolutionary roles, involving  differential survivorship or selectivity of taxa and traits, the  disruption or preservation of evolutionary trends and ecosystem  organization, and the promotion of taxonomic and morphological  diversifications—often along unexpected trajectories—after the  destruction or marginalization of once-dominant clades. The fossil  record suggests that survivorship during mass extinctions is not  strictly random, but it often fails to coincide with factors promoting  survival during times of low extinction intensity. Although of very  serious concern, present-day extinctions have not yet achieved the  intensities seen in the Big Five mass extinctions of the geologic past,  which each removed ≥50\% of the subset of relatively abundant marine  invertebrate genera. The best comparisons for predictive purposes  therefore will involve factors such as differential extinction  intensities among regions, clades, and functional groups, rules  governing postextinction biotic interchanges and evolutionary dynamics,  and analyses of the factors that cause taxa and evolutionary trends to  continue unabated, to suffer setbacks but resume along the same  trajectory, to survive only to fall into a marginal role or disappear  (“dead clade walking”), or to undergo a burst of diversification.  These issues need to be addressed in a spatially explicit framework,  because the fossil record suggests regional differences in  postextinction diversification dynamics and biotic interchanges.  Postextinction diversifications lag far behind the initial taxonomic  and morphological impoverishment and homogenization; they do not simply  reoccupy vacated adaptive peaks, but explore opportunities as opened  and constrained by intrinsic biotic factors and the ecological and  evolutionary context of the radiation.},
   langid = {english}
+}
+
+@article{jacobsenFeedingBehaviourCarnivorous1998,
+  title = {Feeding Behaviour of Carnivorous Dinosaurs as Determined by Tooth Marks on Dinosaur Bones},
+  author = {Jacobsen, Aase Roland},
+  date = {1998-01-01},
+  journaltitle = {Historical Biology},
+  volume = {13},
+  number = {1},
+  pages = {17--26},
+  publisher = {{Taylor \& Francis}},
+  issn = {0891-2963},
+  doi = {10.1080/08912969809386569},
+  url = {https://doi.org/10.1080/08912969809386569},
+  urldate = {2023-02-07},
+  abstract = {Ecological and behavioral aspects of dinosaur research are receiving increasing attention. Tooth‐marked bones have been studied for many years, and have provided important information on the feeding behaviour of mammalian carnivores. Similarly, theropod tooth marks on dinosaur bones can provide clues to feeding behaviour and predator/prey interaction in ancient ecosystems. A study of 1000 dinosaur bones from the Dinosaur Park Formation (Judith River Group, Upper Cretaceous) in Alberta, Canada showed a relatively high percentage of tooth‐marked hadrosaurid bones (14\%), whereas only 5\% of the ceratopsid bones showed tooth marks, and 2\% of the tyrannosaurid bones.},
+  keywords = {Dinosaur bones,Dinosaur Park Formation,Feeding behaviour,Theropod tooth marks,to-read},
+  annotation = {\_eprint: https://doi.org/10.1080/08912969809386569}
 }
 
 @article{janisScalingReproductiveTurnover1991,
@@ -2854,6 +2939,22 @@
   keywords = {Science / Essays,Science / Life Sciences / Biology,Science / Natural History,Science / Paleontology}
 }
 
+@article{pearlExperimentalStudiesDuration1935,
+  title = {Experimental {{Studies}} on the {{Duration}} of {{Life}}. {{XIV}}. {{The Comparative Mortality}} of {{Certain Lower Organisms}}},
+  author = {Pearl, Raymond and Miner, John R.},
+  date = {1935-03},
+  journaltitle = {The Quarterly Review of Biology},
+  volume = {10},
+  number = {1},
+  pages = {60--79},
+  publisher = {{The University of Chicago Press}},
+  issn = {0033-5770},
+  doi = {10.1086/394476},
+  url = {https://www.journals.uchicago.edu/doi/abs/10.1086/394476},
+  urldate = {2023-02-07},
+  keywords = {to-read}
+}
+
 @article{petersLifeHistorySexual2009,
   title = {Life History, Sexual Dimorphism and ‘Ornamental’ Feathers in the Mesozoic Bird {{Confuciusornis}} Sanctus},
   author = {Peters, Winfried S. and Peters, Dieter Stefan},
@@ -3059,6 +3160,25 @@
   langid = {english},
   keywords = {Humanities and Social Sciences,multidisciplinary,Read,Science},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\DX7TTVM2\\Roberts and Solow - 2003 - When did the dodo become extinct.pdf;C\:\\Users\\ericr\\Zotero\\storage\\KKLKB28W\\426245a.html}
+}
+
+@article{rogersCannibalismMadagascanDinosaur2003,
+  title = {Cannibalism in the {{Madagascan}} Dinosaur {{Majungatholus}} Atopus},
+  author = {Rogers, Raymond R. and Krause, David W. and Curry Rogers, Kristina},
+  date = {2003-04},
+  journaltitle = {Nature},
+  volume = {422},
+  number = {6931},
+  pages = {515--518},
+  publisher = {{Nature Publishing Group}},
+  issn = {1476-4687},
+  doi = {10.1038/nature01532},
+  url = {https://www.nature.com/articles/nature01532},
+  urldate = {2023-02-07},
+  abstract = {Many lines of evidence have been brought to bear on the question of theropod feeding ecology, including functional and physiological considerations, morphological constraints, taphonomic associations, and telling—although rare—indications of direct ingestion1,2,3,4,5,6,7. Tooth marks of theropods, although rarely described and generally left unassigned to a particular taxon, can provide unique clues into predator–prey interaction8, and can also yield insights into the extent of carcass utilization9,10. Here we describe a sample of tooth-marked dinosaur bone recovered from three well-documented localities in the Upper Cretaceous Maevarano Formation of Madagascar that provides insights into the feeding ecology of the abelisaurid theropod Majungatholus atopus11. Intensely tooth-marked elements from multiple individuals show that Majungatholus defleshed dinosaur carcasses. Furthermore, Majungatholus clearly fed upon the remains of not only sauropods, but also conspecifics, and thus was a cannibal. Cannibalism is a common ecological strategy among extant carnivores, but until now the evidence in relation to carnivorous dinosaurs has been sparse and anecdotal.},
+  issue = {6931},
+  langid = {english},
+  keywords = {Humanities and Social Sciences,multidisciplinary,Science,to-read}
 }
 
 @online{RoleDecayMineralization,
@@ -3408,6 +3528,25 @@
   file = {C\:\\Users\\ericr\\Zotero\\storage\\S8VLUC97\\Spiegelhalter et al. - 1994 - Bayesian Approaches to Randomized Trials.pdf}
 }
 
+@article{spinageAfricanUngulateLife1972,
+  title = {African {{Ungulate Life Tables}}},
+  author = {Spinage, C. A.},
+  date = {1972},
+  journaltitle = {Ecology},
+  volume = {53},
+  number = {4},
+  pages = {645--652},
+  issn = {1939-9170},
+  doi = {10.2307/1934778},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.2307/1934778},
+  urldate = {2023-02-07},
+  abstract = {The survival curves of four species of African ungulate–impala, buffalo, zebra, and warthog–derived from skulls found in the Akagera National Park, Rwanda, are compared. Three of the species are shown to have the typical logarithmic negatively—skewed adult curve shown by undisturbed large mammal populations, but warthogs apparently have a heavy age—constant number of deaths to middle—age. Attention is drawn to the limitations of time—specific data in the study of population dynamics.},
+  langid = {english},
+  keywords = {To-Read},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.2307/1934778},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\LSLLDUI7\\1934778.html}
+}
+
 @book{StatisticalAnalysisSeries,
   title = {The {{Statistical Analysis}} of {{Series}} of {{Events}}},
   url = {https://link.springer.com/book/9789401178037},
@@ -3471,6 +3610,21 @@
   langid = {english},
   keywords = {biostratigraphy,Dirichlet distribution,extinction,range extension,To Read},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\I6U79T27\\Strauss and Sadler - 1989 - Classical confidence intervals and Bayesian probab.pdf}
+}
+
+@online{tankeHeadbitingBehaviorTheropod1998,
+  title = {Head-Biting Behavior in Theropod Dinosaurs: {{Paleopathological}} Evidence},
+  shorttitle = {Head-Biting Behavior in Theropod Dinosaurs},
+  author = {Tanke, D. and Currie, P. J.},
+  date = {1998},
+  doi = {10.7939/R34T6FJ1P},
+  url = {https://era.library.ualberta.ca/items/01b0f3a0-10b6-4b88-80f4-7b22987946b2},
+  urldate = {2023-02-07},
+  abstract = {Cranial material of Sinraptor dongi (Upper Jurassic, Xinjiang, China), Gorgosaurus libratus, Daspletosaurus torosus (Upper Cretaceous,...},
+  langid = {english},
+  organization = {{ERA}},
+  keywords = {to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\PD3FBQDP\\Tanke and Currie - 1998 - Head-biting behavior in theropod dinosaurs Paleop.pdf}
 }
 
 @article{tannerAssessingRecordCauses2004,
