update: chapter 4 of experimentation for engineers

--- a/My Library.bib
+++ b/My Library.bib
@@ -1574,6 +1574,25 @@
   file = {C\:\\Users\\ericr\\Zotero\\storage\\HELFQ2HM\\Dudgeon and Evans - Calvarial suture interdigitation in hadrosaurids (.pdf;C\:\\Users\\ericr\\Zotero\\storage\\STEFB582\\ede.html}
 }
 
+@article{ebersoleObservationsHeterodontyDentition2023,
+  title = {Observations on Heterodonty within the Dentition of the {{Atlantic Sharpnose Shark}}, {{Rhizoprionodon}} Terraenovae ({{Richardson}}, 1836), from the North-Central {{Gulf}} of {{Mexico}}, {{USA}}, with Implications on the Fossil Record},
+  author = {Ebersole, Jun A. and Kelosky, Abigail T. and Huerta-Beltrán, Bryan L. and Cicimurri, David J. and Drymon, J. Marcus},
+  date = {2023-04-12},
+  journaltitle = {PeerJ},
+  shortjournal = {PeerJ},
+  volume = {11},
+  pages = {e15142},
+  publisher = {{PeerJ Inc.}},
+  issn = {2167-8359},
+  doi = {10.7717/peerj.15142},
+  url = {https://peerj.com/articles/15142},
+  urldate = {2023-04-22},
+  abstract = {The Atlantic Sharpnose Shark, Rhizoprionodon terraenovae (Richardson, 1836), is the most common small coastal requiem shark in the north-central Gulf of Mexico, USA. Despite this fact, little is known about the dental variation within this taxon. To help rectify this shortcoming, we examined 126 male and female R. terraenovae jaws sets across all maturity stages to document the various types of heterodonty occurring in the dentition of this taxon. Quantitative data gathered from a subset of our sample allowed for us to place teeth within the dentition of R. terraenovae into standardized upper and lower parasymphyseal/symphyseal, anterior lateral, and posterior tooth groups. As with all carcharhinid sharks, the dentition of R. terraenovae exhibits monognathic and dignathic heterodonty. We also observed significant ontogenetic heterodonty in the species, as the teeth and dentition progress through five generalized developmental stages as the shark matures. The ontogenetic development of serrations on the teeth appears to be closely related to documented dietary changes as the shark matures. Initial diets are comprised of high percentages of invertebrate prey like shrimp, crabs, and squid, but this transitions through ontogeny to a diet that is more reliant on fishes. We also provide the first documentation of gynandric heterodonty in mature male R. terraenovae, with development of these seasonal teeth likely enabling a male to grasp female sharks during copulation. Our analysis revealed a tremendous amount of variation in the dentition of R. terraenovae, which has direct implications on the taxonomy of fossil Rhizoprionodon. A comparison of the jaws in our sample to those of the extant species of Rhizoprionodon and the morphologically similar Loxodon, Scoliodon, and Sphyrna allowed us to formulate a list of generic-level characteristics to assist with the identification of isolated teeth. When applied to the fossil record, it is shown that some species previously assigned to Rhizoprionodon likely belong to one of the other aforementioned genera. The earliest occurrence of unequivocal Rhizoprionodon teeth in the fossil record are those of the Eocene †R. ganntourensis (Arambourg, 1952), the oldest records of which occur in early Ypresian deposits in Alabama and Mississippi, USA. The early Eocene occurrence of unequivocal fossil Rhizoprionodon teeth in Alabama predates the first occurrence of Negaprion, Galeocerdo, and Carcharhinus teeth in the state, supporting published molecular and morphological phylogenies positing a basal position for Rhizoprionodon within the Carcharhinidae.},
+  langid = {english},
+  keywords = {!!,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\G85T2BLF\\Ebersole et al. - 2023 - Observations on heterodonty within the dentition o.pdf}
+}
+
 @article{eberthDinosaurBiostratigraphyEdmonton2013,
   title = {Dinosaur Biostratigraphy of the {{Edmonton Group}} ({{Upper Cretaceous}}), {{Alberta}}, {{Canada}}: Evidence for Climate Influence},
   shorttitle = {Dinosaur Biostratigraphy of the {{Edmonton Group}} ({{Upper Cretaceous}}), {{Alberta}}, {{Canada}}},
@@ -2150,9 +2169,9 @@
   title = {Bayesian {{Workflow}}},
   author = {Gelman, Andrew and Vehtari, Aki and Simpson, Daniel and Margossian, Charles C. and Carpenter, Bob and Yao, Yuling and Kennedy, Lauren and Gabry, Jonah and Bürkner, Paul-Christian and Modrák, Martin},
   date = {2020-11-03},
-  number = {arXiv:2011.01808},
-  eprint = {arXiv:2011.01808},
+  eprint = {2011.01808},
   eprinttype = {arxiv},
+  eprintclass = {stat},
   url = {http://arxiv.org/abs/2011.01808},
   urldate = {2022-07-06},
   abstract = {The Bayesian approach to data analysis provides a powerful way to handle uncertainty in all observations, model parameters, and model structure using probability theory. Probabilistic programming languages make it easier to specify and fit Bayesian models, but this still leaves us with many options regarding constructing, evaluating, and using these models, along with many remaining challenges in computation. Using Bayesian inference to solve real-world problems requires not only statistical skills, subject matter knowledge, and programming, but also awareness of the decisions made in the process of data analysis. All of these aspects can be understood as part of a tangled workflow of applied Bayesian statistics. Beyond inference, the workflow also includes iterative model building, model checking, validation and troubleshooting of computational problems, model understanding, and model comparison. We review all these aspects of workflow in the context of several examples, keeping in mind that in practice we will be fitting many models for any given problem, even if only a subset of them will ultimately be relevant for our conclusions.},
@@ -2246,6 +2265,42 @@
   langid = {english},
   keywords = {To Read},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\MCJTBN24\\Gould and Calloway - 1980 - Clams and brachiopods—ships that pass in the night.pdf;C\:\\Users\\ericr\\Zotero\\storage\\IZZHRS79\\D9C48C21DB46EB259B1986FDBD54BE19.html}
+}
+
+@article{gutarraLocomotorEcomorphologyMesozoic2023,
+  title = {The Locomotor Ecomorphology of {{Mesozoic}} Marine Reptiles},
+  author = {Gutarra, Susana and Stubbs, Thomas L. and Moon, Benjamin C. and Heighton, Beatrice H. and Benton, Michael J.},
+  date = {2023},
+  journaltitle = {Palaeontology},
+  volume = {66},
+  number = {2},
+  pages = {e12645},
+  issn = {1475-4983},
+  doi = {10.1111/pala.12645},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/pala.12645},
+  urldate = {2023-04-22},
+  abstract = {The aftermath of the end-Permian mass extinction provided ecological opportunities for many groups of reptiles, marking the beginning of reptile dominance of the Mesozoic oceans. Clades such as ichthyosaurs, thalattosuchians, sauropterygians, mosasaurs and turtles evolved a remarkable diversity of ecological niches and became important components of aquatic ecosystems. Locomotion is a key aspect of ecology, crucial for many biological functions such as foraging and migration. However, the evolution of locomotory adaptations across all Mesozoic marine reptiles remains poorly understood. Here we present multivariate and disparity analyses based on body proportions, body size and post-cranial proxies for locomotion in 125 species of Mesozoic marine reptiles. Our analysis highlights key anatomical transformations in the evolution of swimming modes, characterizing two divergent evolutionary paths in the transition from drag-based to lift-based propulsion in both the axial and appendicular spectrum. Analyses against geological time do not show evidence for an explosive radiation after the end-Permian extinction, pointing instead to a gradual increase in locomotory disparity during the whole Mesozoic, which reached the highest levels in the Cretaceous. Our analysis also provides insight into the evolution of locomotion in particular clades. Some notable findings are the high aquatic specialization in the earliest ichthyosauromorphs and the morphospace overlap between mosasauroids and ichthyosauromorphs.},
+  langid = {english},
+  keywords = {!!!,aquatic tetrapod,disparity,locomotion,locomotory morphospace,marine reptile,Mesozoic,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\5XX3WXXS\\Gutarra et al. - 2023 - The locomotor ecomorphology of Mesozoic marine rep.pdf;C\:\\Users\\ericr\\Zotero\\storage\\5JEW89V8\\pala.html}
+}
+
+@article{halseyReignPvalueWhat2019,
+  title = {The Reign of the P-Value Is over: What Alternative Analyses Could We Employ to Fill the Power Vacuum?},
+  shorttitle = {The Reign of the P-Value Is Over},
+  author = {Halsey, Lewis G.},
+  date = {2019-05-22},
+  journaltitle = {Biology Letters},
+  volume = {15},
+  number = {5},
+  pages = {20190174},
+  publisher = {{Royal Society}},
+  doi = {10.1098/rsbl.2019.0174},
+  url = {https://royalsocietypublishing.org/doi/10.1098/rsbl.2019.0174},
+  urldate = {2023-04-22},
+  abstract = {The p-value has long been the figurehead of statistical analysis in biology, but its position is under threat. p is now widely recognized as providing quite limited information about our data, and as being easily misinterpreted. Many biologists are aware of p's frailties, but less clear about how they might change the way they analyse their data in response. This article highlights and summarizes four broad statistical approaches that augment or replace the p-value, and that are relatively straightforward to apply. First, you can augment your p-value with information about how confident you are in it, how likely it is that you will get a similar p-value in a replicate study, or the probability that a statistically significant finding is in fact a false positive. Second, you can enhance the information provided by frequentist statistics with a focus on effect sizes and a quantified confidence that those effect sizes are accurate. Third, you can augment or substitute p-values with the Bayes factor to inform on the relative levels of evidence for the null and alternative hypotheses; this approach is particularly appropriate for studies where you wish to keep collecting data until clear evidence for or against your hypothesis has accrued. Finally, specifically where you are using multiple variables to predict an outcome through model building, Akaike information criteria can take the place of the p-value, providing quantified information on what model is best. Hopefully, this quick-and-easy guide to some simple yet powerful statistical options will support biologists in adopting new approaches where they feel that the p-value alone is not doing their data justice.},
+  keywords = {!!!,AIC,Bayesian,confidence intervals,effect size,statistical analysis,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\GWW2Q5LR\\Halsey - 2019 - The reign of the p-value is over what alternative.pdf}
 }
 
 @book{hammerPaleontologicalDataAnalysis2008,
@@ -3573,6 +3628,23 @@
   langid = {english},
   keywords = {!!!,to-read},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\RCGVRDBW\\Parry et al. - 2022 - Surveying the developer experience of flaky tests.pdf}
+}
+
+@incollection{pearlCommentUnderstandingSimpson2022,
+  title = {Comment: {{Understanding Simpson}}’s {{Paradox}}},
+  shorttitle = {Comment},
+  booktitle = {Probabilistic and {{Causal Inference}}: {{The Works}} of {{Judea Pearl}}},
+  author = {Pearl, Judea},
+  date = {2022-03-04},
+  edition = {1},
+  volume = {36},
+  pages = {399--412},
+  publisher = {{Association for Computing Machinery}},
+  location = {{New York, NY, USA}},
+  url = {https://doi.org/10.1145/3501714.3501738},
+  urldate = {2023-04-17},
+  isbn = {978-1-4503-9586-1},
+  keywords = {!!!,to-read}
 }
 
 @article{pearlExperimentalStudiesDuration1935,
