update: dinosaur paleobiology chapter 3

--- a/My Library.bib
+++ b/My Library.bib
@@ -2244,7 +2244,7 @@
   urldate = {2023-03-05},
   abstract = {Many industries are required to monitor themselves in meeting regulatory policies intended to protect the environment. Self-reporting of environmental performance can place the cost of monitoring on companies rather than taxpayers, but there are obvious risks of bias, often addressed through external audits or inspections. Surprisingly, there have been relatively few empirical analyses of bias in industry self-reported data. Here, we test for bias in reporting of environmental compliance data using a unique data set from Canadian salmon farms, where companies monitor the number of parasitic sea lice on fish in open sea pens, in order to minimize impacts on wild fish in surrounding waters. We fit a hierarchical population-dynamics model to these sea-louse count data using a Bayesian approach. We found that the industry's monthly counts of two sea-louse species, Caligus clemensi and Lepeophtheirus salmonis, increased by a factor of 1.95 (95\% credible interval: 1.57, 2.42) and 1.18 (1.06, 1.31), respectively, in months when counts were audited by the federal fisheries department. Consequently, industry sea-louse counts are less likely to trigger costly but mandated delousing treatments intended to avoid sea-louse epidemics in wild juvenile salmon. These results highlight the potential for combining external audits of industry self-reported data with analyses of their reporting to maintain compliance with regulations, achieve intended conservation goals, and build public confidence in the process.},
   langid = {english},
-  keywords = {!,Caligus clemensi,environmental compliance,environmental management,environmental policy,industry data,Lepeophtheirus salmonis,Pacific salmon,policy implementation,salmon farms,salmon lice,sea lice,self-reported data,to-read},
+  keywords = {!!!,Caligus clemensi,environmental compliance,environmental management,environmental policy,industry data,Lepeophtheirus salmonis,Pacific salmon,policy implementation,salmon farms,salmon lice,sea lice,self-reported data,to-read},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\S637VDP5\\eap.html}
 }
 
@@ -2773,6 +2773,23 @@
   langid = {english},
   pagetotal = {252},
   keywords = {Science / Life Sciences / Biology,To Read}
+}
+
+@article{knappThreedimensionalGeometricMorphometric2021,
+  title = {Three-Dimensional Geometric Morphometric Analysis of the Skull of {{Protoceratops}} Andrewsi Supports a Socio-Sexual Signalling Role for the Ceratopsian Frill},
+  author = {Knapp, A. and Knell, R. J. and Hone, D. W. E.},
+  date = {2021-02-03},
+  journaltitle = {Proceedings of the Royal Society B: Biological Sciences},
+  volume = {288},
+  number = {1944},
+  pages = {20202938},
+  publisher = {{Royal Society}},
+  doi = {10.1098/rspb.2020.2938},
+  url = {https://royalsocietypublishing.org/doi/full/10.1098/rspb.2020.2938},
+  urldate = {2023-05-08},
+  abstract = {Socio-sexual selection is predicted to be an important driver of evolution, influencing speciation, extinction and adaptation. The fossil record provides a means of testing these predictions, but detecting its signature from morphological data alone is difficult. There are, nonetheless, some specific patterns of growth and variation which are expected of traits under socio-sexual selection. The distinctive parietal-squamosal frill of ceratopsian dinosaurs has previously been suggested as a socio-sexual display trait, but evidence for this has been limited. Here, we perform a whole-skull shape analysis of an unprecedentedly large sample of specimens of Protoceratops andrewsi using a high-density landmark-based geometric morphometric approach to test four predictions regarding a potential socio-sexual signalling role for the frill. Three predictions—low integration with the rest of the skull, significantly higher rate of change in size and shape during ontogeny, and higher morphological variance than other skull regions—are supported. One prediction, sexual dimorphism in shape, is not supported, suggesting that sexual differences in P. andrewsi are likely to be small. Together, these findings are consistent with mutual mate choice or selection for signalling quality in more general social interactions, and support the hypothesis that the frill functioned as a socio-sexual signal in ceratopsian dinosaurs.},
+  keywords = {!!!,dinosauria,evolution,geometric morphometrics,socio-sexual selection,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\GD6L5YXW\\Knapp et al. - 2021 - Three-dimensional geometric morphometric analysis .pdf}
 }
 
 @article{kochLateQuaternaryExtinctions2006,
